# weblsp

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/workflows/: benchmark.yaml  ci.yaml  label.yml
crates/codegen/: Cargo.toml
crates/codegen/src/: codegen_file.rs  main.rs
crates/csslsrs/: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml
crates/csslsrs/.github/workflows/: benchmark.yaml  ci.yaml
crates/csslsrs/.zed/: settings.json
crates/csslsrs/benches/: bench_main.rs  color.rs
crates/csslsrs/benches/features/: color.rs  document_symbols.rs  folding.rs  hover.rs  mod.rs
crates/csslsrs/src/: analyzer.rs  css_data.rs  css_data_generated.rs  formatter.rs  lib.rs  parser.rs  service.rs  store.rs  text_document.rs  types.rs  wasm_text_document.rs
crates/csslsrs/src/converters/: README.md  from_proto.rs  line_index.rs  mod.rs  to_proto.rs
crates/csslsrs/src/features/: color_parser.rs  colors.rs  completions.rs  document_symbols.rs  folding.rs  hover.rs
crates/csslsrs/tests/: colors.rs  completions.rs  document_symbols.rs  folding.rs  hover.rs
crates/weblsp/: Cargo.toml  README.md
crates/weblsp/src/: css.rs  main.rs  notifications.rs  requests.rs  response.rs  server.rs
src/: css.rs  main.rs  notifications.rs  requests.rs
