[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
csslsrs = { version = "0.1.0", path = "../csslsrs" }
prettyplease = "0.2.25"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = "1.0.215"
serde_json = "1.0.133"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
