[package]
name = "csslsrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[dependencies]
biome_css_parser = "0.5"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
