[package]
name = "weblsp"
version = "0.1.0"
edition = "2021"
description = "Language server for the web."
license = "MIT"

[dependencies]
lsp-server = "0.7"
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csslsrs = { version = "0.1.0", path = "../csslsrs" }
